external-crates/move/crates/move-compiler/tests/move_2024/matching/guard_binders.exp
error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/matching/guard_binders.move:27:16
   │
26 │         let o: Option<u64> = Option::None;
   │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut o'
27 │         match (&mut o) {
   │                ^^^^^^ Invalid mutable borrow of immutable variable 'o'

